Downgrade for tests